<resources>
    <string name="app_name">Яндекс Еда</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_enter">Войти</string>
    <string name="menu_support">Связаться с нами</string>
    <string name="menu_about">О сервисе</string>
    <string name="menu_man">Стать курьеров</string>
    <string name="menu_stile">Сменить тему</string>
    <string name="menu_exit">Выход</string>

    <string name="home_second">Home Second</string>

    <string name="open_nav">open nav</string>
    <string name="close_nav">close_nav</string>

    <string name="scr_burger">Бургеры</string>
    <string name="scr_pizza">Пицца</string>
    <string name="scr_great_food">Здоровая еда</string>
    <string name="scr_avtor">Авторская</string>
    <string name="scr_children">Для детей</string>
    <string name="scr_italian">Итальянская</string>
    <string name="scr_russian">Русская</string>
    <string name="scr_chicken">Курица</string>
    <string name="src_sushi">Суши</string>
</resources>
