<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_enter"
            android:icon="@drawable/user"
            android:title="@string/menu_enter" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/comment"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_man"
            android:icon="@drawable/run"
            android:title="@string/menu_man"/>
        <item
            android:id="@+id/nav_stile"
            android:icon="@drawable/rgb"
            android:title="@string/menu_stile"
            />
    </group>
</menu>
