<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_back_res"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/burger"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_burger" />

            <View
                android:id="@+id/view"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/pizza"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_pizza" />

            <View
                android:id="@+id/view20"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/chicken"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_chicken" />

            <View
                android:id="@+id/view21"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sushi"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/src_sushi" />

            <View
                android:id="@+id/view2"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/great_food"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_great_food" />

            <View
                android:id="@+id/view3"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/avtor"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_avtor" />

            <View
                android:id="@+id/view5"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/children"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_children" />

            <View
                android:id="@+id/view4"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/italian"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_italian" />

            <View
                android:id="@+id/view6"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/russian"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/maket_button_in_scroll_view_no_light"
                android:onClick="onClickScrollView"
                android:text="@string/scr_russian" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:animationCache="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:id="@+id/scroll2"
            android:layout_width="match_parent"
            android:layout_height="630dp"
            android:layout_marginTop="30dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:id="@+id/scrollCard"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/card1"
                            android:layout_width="255dp"
                            android:layout_height="140dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/card"
                            android:onClick="onClickHorScrollView" />

                        <ImageView
                            android:id="@+id/URL"
                            android:layout_width="255dp"
                            android:layout_height="140dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/card2"
                            android:onClick="onClickHorScrollView" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="     Рядом с вами"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="800dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>